@@ -1,3 +1,9 @@
+2020-12-05  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* NEWS: Mention new/jfm feature.
+	* dospecial.c:
+	Output error of html special not to STDOUT but to STDERR.
+
 2020-11-28  Akira Kakuto  <kakuto@w32tex.org>
 
 	* protos.h (titlename): new global.
